syntax = "proto3";

import "protoc-gen-openapiv2/options/annotations.proto";
import "google/protobuf/timestamp.proto";

package pbtb;

option go_package = "github.com/TencentBlueKing/bk-bscp/pkg/protocol/core/task_batch;pbtb";

// OperateRange 操作范围
message OperateRange {
  repeated string set_names = 1
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "集群名称列表" }];
  repeated string module_names = 2
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "模块名称列表" }];
  repeated string service_names = 3
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "服务实例名称列表" }];
  repeated string cc_process_names = 4
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "CC进程名称列表" }];
  repeated uint32 cc_process_ids = 5
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "CC进程ID列表" }];
}

// ProcessTaskData 进程任务数据
message ProcessTaskData {
  string environment = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "环境" }];
  OperateRange operate_range = 2
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "操作范围" }];
}

// TaskBatch represents a batch task execution record
message TaskBatch {
  uint32 id = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "任务批次ID" }];
  string task_object = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "任务对象" }];
  string task_action = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "任务动作" }];
  ProcessTaskData task_data = 4
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "任务数据" }];
  string status = 5 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "任务状态" }];
  float execution_time = 6
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "执行耗时(秒)" }];
  google.protobuf.Timestamp start_at = 7
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "开始时间" }];
  google.protobuf.Timestamp end_at = 8
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "结束时间" }];
  string creator = 9 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "创建人" }];
}

// ProcessPayload 进程任务的配置快照
message ProcessPayload {
  string set_name = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "集群名" }];
  string module_name = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "模块名" }];
  string service_name = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "服务实例" }];
  string environment = 4 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "环境" }];
  string alias = 5 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "进程别名" }];
  string inner_ip = 6 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "IP" }];
  string agent_id = 7 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "Agent ID" }];
  string cc_process_id = 8 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "CC进程ID" }];
  uint32 host_inst_seq = 9
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "主机级别的序号" }];
  uint32 module_inst_seq = 10
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "模块级别的序号" }];
  string config_data = 11
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "进程启动相关配置" }];
  string func_name = 12 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "进程二进制文件名" }];
}

// TaskDetail 任务详情
message TaskDetail {
  string status = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "任务状态" }];
  string message = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "任务消息" }];
  string creator = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "创建者" }];
  float execution_time = 4
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "执行时间(s)" }];
  ProcessPayload process_payload = 5
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "进程配置快照" }];
}

// TaskStatusStatItem 任务状态统计项
message TaskStatusStatItem {
  string status = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "任务状态" }];
  uint32 count = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "数量" }];
  string message = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "状态描述" }];
}

// Choice 查询枚举值选项
message Choice {
  string id = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "选项ID" }];
  string name = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "选项名称" }];
}

// FilterOptions 查询过滤选项
message FilterOptions {
  repeated Choice task_object_choices = 1
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "任务对象查询选项" }];
  repeated Choice task_action_choices = 2
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "任务动作查询选项" }];
  repeated Choice status_choices = 3
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "执行状态查询选项" }];
  repeated Choice executor_choices = 4
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "执行帐户查询选项" }];
}

// TaskDetailFilterOptions 任务详情过滤选项
message TaskDetailFilterOptions {
  repeated Choice set_name_choices = 1
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "集群名查询选项" }];
  repeated Choice module_name_choices = 2
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "模块名查询选项" }];
  repeated Choice service_name_choices = 3
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "服务名称查询选项" }];
  repeated Choice alias_choices = 4
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "进程别名查询选项" }];
  repeated Choice cc_process_id_choices = 5
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "CC进程ID查询选项" }];
  repeated Choice inst_id_choices = 6
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "实例ID查询选项" }];
}
